k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zeta-reticula
  labels:
    name: zeta-reticula
